crates/basisu_c_sys/tests/snapshots/transcoder__transcode_assets_bcn.snap
---
source: crates/basisu_c_sys/tests/transcoder.rs
expression: results
---
[
    (
        "alpha0_etc1s_mips.basisu.ktx2",
        TranscodeInfo {
            width: 256,
            height: 256,
            levels: 9,
            layers: 0,
            faces: 1,
            is_srgb: true,
            basis_format: Etc1s,
            preferred_target: Bc7Rgba,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                256,
                256,
                1,
            ),
            format: Bc7RgbaUnormSrgb,
            mip_level_count: 9,
            view_dimension: D2,
        },
    ),
    (
        "desk_uastc_hdr_4x4.basisu.ktx2",
        TranscodeInfo {
            width: 648,
            height: 876,
            levels: 1,
            layers: 0,
            faces: 1,
            is_srgb: false,
            basis_format: UastcHdr4x4,
            preferred_target: Bc6H,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                648,
                876,
                1,
            ),
            format: Bc6hRgbUfloat,
            mip_level_count: 1,
            view_dimension: D2,
        },
    ),
    (
        "desk_uastc_hdr_6x6_mips.basisu.ktx2",
        TranscodeInfo {
            width: 648,
            height: 876,
            levels: 10,
            layers: 0,
            faces: 1,
            is_srgb: false,
            basis_format: UastcHdr6x6,
            preferred_target: Bc6H,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                648,
                876,
                1,
            ),
            format: Bc6hRgbUfloat,
            mip_level_count: 10,
            view_dimension: D2,
        },
    ),
    (
        "kodim20_astc_ldr_8x8_mips.basisu.ktx2",
        TranscodeInfo {
            width: 768,
            height: 512,
            levels: 10,
            layers: 0,
            faces: 1,
            is_srgb: true,
            basis_format: AstcLdr8x8,
            preferred_target: Bc7Rgba,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                768,
                512,
                1,
            ),
            format: Bc7RgbaUnormSrgb,
            mip_level_count: 10,
            view_dimension: D2,
        },
    ),
    (
        "skybox_xuastc_ldr_8x8_cubemap_mips.basisu.ktx2",
        TranscodeInfo {
            width: 2048,
            height: 2048,
            levels: 12,
            layers: 0,
            faces: 6,
            is_srgb: true,
            basis_format: XuastcLdr8x8,
            preferred_target: Bc7Rgba,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                2048,
                2048,
                6,
            ),
            format: Bc7RgbaUnormSrgb,
            mip_level_count: 12,
            view_dimension: Cube,
        },
    ),
    (
        "tough_uastc_ldr_4x4.basisu.ktx2",
        TranscodeInfo {
            width: 1120,
            height: 1104,
            levels: 1,
            layers: 0,
            faces: 1,
            is_srgb: true,
            basis_format: UastcLdr4x4,
            preferred_target: Bc7Rgba,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                1120,
                1104,
                1,
            ),
            format: Bc7RgbaUnormSrgb,
            mip_level_count: 1,
            view_dimension: D2,
        },
    ),
    (
        "wikipedia_xuastc_ldr_8x8_mips.basisu.ktx2",
        TranscodeInfo {
            width: 1848,
            height: 888,
            levels: 11,
            layers: 0,
            faces: 1,
            is_srgb: true,
            basis_format: XuastcLdr8x8,
            preferred_target: Bc7Rgba,
        },
        TranscodedImage {
            data: [],
            data_order: MipMajor,
            size: (
                1848,
                888,
                1,
            ),
            format: Bc7RgbaUnormSrgb,
            mip_level_count: 11,
            view_dimension: D2,
        },
    ),
]
