crates/basisu_c_sys/tests/snapshots/transcoder__uncompressed_desk_uastc_hdr_6x6_mips_layer0_mip8.snap
---
source: crates/basisu_c_sys/tests/transcoder.rs
expression: output
extension: exr
snapshot_kind: binary
---
