crates/basisu_c_sys/tests/snapshots/transcoder__uncompressed_skybox_xuastc_ldr_8x8_cubemap_mips_layer2_mip10.snap
---
source: crates/basisu_c_sys/tests/transcoder.rs
expression: output
extension: webp
snapshot_kind: binary
---
